--- a/.github/workflows/Repo-Sync.yaml
+++ b/.github/workflows/Repo-Sync.yaml
@@ -31,94 +31,95 @@ jobs:
         run: |
           bash ./Sync.sh \
             https://github.com/JDHelloWorld/jd_scripts main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/jd-scripts ts2js
-      - name: hundun
-        run: |
-          bash ./Sync.sh \
-            https://github.com/whyour/hundun master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/hundun
-      - name: ZCY01
-        run: |
-          bash ./Sync.sh \
-            https://github.com/ZCY01/daily_scripts main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/ZCY01
-      - name: yangtingxiao
-        run: |
-          bash ./Sync.sh \
-            https://github.com/yangtingxiao/QuantumultX master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/yangtingxiao
-      - name: JDDJ
-        run: |
-          bash ./Sync.sh \
-            https://github.com/passerby-b/JDDJ main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDDJ
-      - name: longzhuzhu
-        run: |
-          bash ./Sync.sh \
-            https://github.com/longzhuzhu/nianyu main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/longzhuzhu
-      - name: Ariszy
-        run: |
-          bash ./Sync.sh \
-            https://github.com/Ariszy/Private-Script master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/Ariszy
-      - name: moposmall
-        run: |
-          bash ./Sync.sh \
-            https://github.com/moposmall/Script main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/moposmall
-      - name: pxylen
-        run: |
-          bash ./Sync.sh \
-            https://github.com/pxylen/dog_jd master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/pxylen
-      - name: ztxtop
-        run: |
-          bash ./Sync.sh \
-            https://github.com/ztxtop/x main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/ztxtop
-      - name: airacg
-        run: |
-          bash ./Sync.sh \
-            https://github.com/airacg/jd_task main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/airacg
-      - name: JD_Diy
-        run: |
-          bash ./Sync.sh \
-            https://github.com/chiupam/JD_Diy master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JD-Diy
-      - name: Sunert
-        run: |
-          bash ./Sync.sh \
-            https://github.com/Sunert/Script master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/Sunert
-      - name: curtinlv
-        run: |
-          bash ./Sync.sh \
-            https://github.com/curtinlv/JD-Script main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/curtinlv
-      - name: Tsukasa007
-        run: |
-          bash ./Sync.sh \
-            https://github.com/Tsukasa007/my_script master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/Tsukasa007
-      - name: jiulan
-        run: |
-          bash ./Sync.sh \
-            https://github.com/jiulan/platypus main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/jiulan
-      - name: star261
-        run: |
-          bash ./Sync.sh \
-            https://github.com/star261/jd main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/star261
-      - name: smiek2221
-        run: |
-          bash ./Sync.sh \
-            https://github.com/smiek2221/scripts master \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/smiek2221
-      - name: X1a0He
-        run: |
-          bash ./Sync.sh \
-            https://github.com/X1a0He/jd_scripts_fixed main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/X1a0He
+            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDHelloWorld ts2js
+      #- name: hundun
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/whyour/hundun master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/hundun
+      #- name: ZCY01
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/ZCY01/daily_scripts main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/ZCY01
+      #- name: yangtingxiao
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/yangtingxiao/QuantumultX master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/yangtingxiao
+      #- name: JDDJ
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/passerby-b/JDDJ main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDDJ
+      #- name: longzhuzhu
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/longzhuzhu/nianyu main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/longzhuzhu
+      #- name: Ariszy
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/Ariszy/Private-Script master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/Ariszy
+      #- name: moposmall
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/moposmall/Script main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/moposmall
+      #- name: pxylen
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/pxylen/dog_jd master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/pxylen
+      #- name: ztxtop
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/ztxtop/x main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/ztxtop
+      #- name: airacg
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/airacg/jd_task main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/airacg
+      #- name: JD_Diy
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/chiupam/JD_Diy master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JD-Diy
+      #- name: Sunert
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/Sunert/Script master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/Sunert
+      #- name: curtinlv
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/curtinlv/JD-Script main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/curtinlv
+      #- name: Tsukasa007
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/Tsukasa007/my_script master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/Tsukasa007
+      #- name: jiulan
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/jiulan/platypus main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/jiulan
+      #- name: star261
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/star261/jd main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/star261
+      #- name: smiek2221
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/smiek2221/scripts master \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/smiek2221
+      #- name: X1a0He
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/X1a0He/jd_scripts_fixed main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/X1a0He
+#
