--- a/.github/workflows/Repo-Sync.yaml
+++ b/.github/workflows/Repo-Sync.yaml
@@ -32,6 +32,11 @@ jobs:
           bash ./Sync.sh \
             https://github.com/JDHelloWorld/jd_scripts main \
             https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDHelloWorld ts2js
+      - name: KingRan           
+        run: |
+          bash ./Sync.sh \
+            https://github.com/KingRan/KR main \
+            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/KingRan
       #- name: hundun
       #  run: |
       #    bash ./Sync.sh \
