--- a/.github/workflows/Repo-Sync.yaml
+++ b/.github/workflows/Repo-Sync.yaml
@@ -28,11 +28,11 @@ jobs:
           bash ./Sync.sh \
             https://github.com/SuMaiKaDe/bot main \
             https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JD-Bot
-      - name: JDHelloWorld
-        run: |
-          bash ./Sync.sh \
-            https://github.com/JDHelloWorld/jd_scripts main \
-            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDHelloWorld ts2js
+      #- name: JDHelloWorld
+      #  run: |
+      #    bash ./Sync.sh \
+      #      https://github.com/JDHelloWorld/jd_scripts main \
+      #      https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDHelloWorld ts2js
       - name: KingRan           
         run: |
           bash ./Sync.sh \
