--- a/.github/workflows/Repo-Sync.yaml
+++ b/.github/workflows/Repo-Sync.yaml
@@ -78,6 +78,11 @@ jobs:
           bash ./Sync.sh \
             https://github.com/JDWXX/jd_job main \
             https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/JDWXX
+      - name: jd-depot
+        run: |
+          bash ./Sync.sh \
+            https://github.com/Akali5/jd-depot main \
+            https://${{ github.repository_owner }}:${{ secrets.ACTION_SECRET }}@github.com/sync-auto/jd-depot            
             
       #- name: hundun
       #  run: |
